# solana-lottery

./: .cursorrules  .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json
programs/solana-lottery/: Cargo.toml
programs/solana-lottery/src/: errors.rs  lib.rs  utils.rs
programs/solana-lottery/src/instructions/: buy_ticket.rs  claim_prize.rs  create_lottery.rs  distribute_prize.rs  execute_draw.rs  mod.rs  recycle_unclaimed.rs  schedule_draw.rs  withdraw_treasury.rs
programs/solana-lottery/src/state/: lottery.rs  mod.rs  treasury.rs
tests/: solana-lottery.js  solana-lottery.ts
