[package]
name = "solana-lottery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_lottery"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
clockwork-sdk = "1.4.2"  # No change needed
spl-token-2022 = { version = "0.9", features = ["no-entrypoint"] }  # No change needed
pyth-sdk-solana = "0.10.3"
solana-program = "2.1.11"
anchor-spl = "0.30.1"
anchor-lang = { version = "0.30.1", features = ["anchor-debug"] }
sha2 = "0.10.8"
bytemuck = "1.14.3"


